--- a/.github/workflows/pages-build.yml
+++ b/.github/workflows/pages-build.yml
@@ -19,7 +19,7 @@ jobs:
       - run: npm install
       - run: npm run website
       - run: |
-          git config --global user.name 'Alessandro'
-          git config --global user.email 'alenaksu@users.noreply.github.com'
+          git config --global user.name 'ka66ann'
+          git config --global user.email 'ka66ann@gmail.com'
           git add -A
           git diff-index --quiet HEAD || git commit -m "chore: build pages" && git push
