--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@alenaksu/json-viewer",
-    "version": "1.0.1",
+    "name": "c1a",
+    "version": "2.0.0",
     "main": "dist/json-viewer.js",
     "module": "dist/json-viewer.js",
     "source": "src/index.js",
